--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "roboto-fontface": "^0.10.0",
     "typescript": "3.5.2"
   },
   "scripts": {
